--- a/test_2/src/index.css
+++ b/test_2/src/index.css
@@ -8,3 +8,12 @@ body {
   padding: 0;
   box-sizing: border-box;
 }
+
+* {
+  font-family: "Roboto", sans-serif;
+}
+
+a {
+  text-decoration: none;
+  color: black;
+}
