--- a/test_2/src/styles/NavBar/Nav/Nav.scss
+++ b/test_2/src/styles/NavBar/Nav/Nav.scss
@@ -3,8 +3,13 @@
     align-items: center;
     justify-content: space-between;
 
+    position: fixed;
+    top: 0;
+    left: 0;
     height: 15vh;
+    width: 100%;
     padding: 0 5em;
+
 }
 
 .logo__wrapper {
@@ -21,8 +26,9 @@
 
     a {
         margin-left: 1.5em;
-        font-size: 1.5rem;
+        font-size: 1.2rem;
         font-weight: 600;
+        color: white;
     }
 }
 
@@ -34,25 +40,33 @@
     justify-content: flex-end;
 
     li {
-       font-weight: 600;
-        padding-left: 2em;
+       font-weight: 400;
+        padding-left: 3em;
+        display: flex;
+        align-items: center;
     }
 
     li:not(:last-child) {
-        font-size: 1.5rem;
+        font-size: 1rem;
+
+        a {
+            color: white;
+        }
     }
 
     li:last-child a {
-        color: #51d2f2;
-        border: 1px solid #51d2f2;
-        border-radius: 10px;
-        padding: 0.5em 3em;
+        font-size: 0.8rem;
+        color: black;
+        background-color: white;
+        border: 1px solid white;
+        border-radius: 20px;
+        padding: 0.8em 3em;
 
         transition: all .3s ease;
 
         &:hover {
             color: white;
-            background-color: #51d2f2;
+            background-color: transparent;
         }
     }
 }
