--- a/test_2/src/index.css
+++ b/test_2/src/index.css
@@ -11,9 +11,15 @@ html {
 
 * {
   font-family: "Roboto", sans-serif;
+  color: rgb(50, 50, 50);
 }
 
 a {
   text-decoration: none;
   color: black;
+}
+
+.container {
+  margin: 0 auto;
+  width: min(90%, 70.5rem);
 }
