--- a/test_2/src/styles/NavBar/Nav/Nav.css
+++ b/test_2/src/styles/NavBar/Nav/Nav.css
@@ -8,7 +8,7 @@
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  position: fixed;
+  position: absolute;
   top: 0;
   left: 0;
   height: 15vh;
