--- a/test_2/src/styles/NavBar/Nav/Nav.scss
+++ b/test_2/src/styles/NavBar/Nav/Nav.scss
@@ -3,7 +3,7 @@
     align-items: center;
     justify-content: space-between;
 
-    position: fixed;
+    position: absolute;
     top: 0;
     left: 0;
     height: 15vh;
