--- a/test_2/src/styles/Header/Header.scss
+++ b/test_2/src/styles/Header/Header.scss
@@ -13,11 +13,34 @@
     justify-content: center;
 
     padding-top: 15vh;
+    padding-left: 5em;
+    padding-right: 5em;
+}
+
+@media screen and (max-width: 900px) {
+    .header__wrapper{
+        align-items: flex-start;
+        padding-top: 20vh;
+        padding-bottom: 5em;
+    }
+}
+
+@media screen and (max-width: 500px) {
+    .header__wrapper {
+        padding-left: 3em;
+        padding-right: 3em;
+    }
 }
 
 .header__title, .header__tagline {
     color: white;
     font-weight: 300;
+}
+
+@media screen and (max-width: 900px) {
+    .header__tagline {
+        line-height: 2rem;
+    }
 }
 
 .header__title {
@@ -42,6 +65,12 @@
     &:hover{
         background-color: transparent;
         color: white;
+    }
+}
+
+@media screen and (max-width: 900px) {
+    .header__cta {
+        margin-top: 1.5em;
     }
 }
 
@@ -89,7 +118,7 @@
     flex-wrap: wrap;
 
     & > * {
-        flex: 1 1 2em
+        flex: 1 1 2em;
     }
 
     .content__item {
@@ -97,6 +126,7 @@
         flex-direction: column;
         align-items: center;
         padding: 0 2em;
+        padding-bottom: 2em;
 
         img {
             width: 150px;
