--- a/test_2/src/styles/Pricing/PricingCard.css
+++ b/test_2/src/styles/Pricing/PricingCard.css
@@ -10,6 +10,15 @@
           justify-content: center;
 }
 
+@media screen and (max-width: 900px) {
+  .cards__wrapper {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+}
+
 .card {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -139,5 +148,11 @@
 
 .card:nth-child(2) .card__cta:hover a {
   color: white;
+}
+
+@media screen and (max-width: 900px) {
+  .card {
+    margin-bottom: 2em;
+  }
 }
 /*# sourceMappingURL=PricingCard.css.map */
