--- a/test_2/src/styles/About/About.css
+++ b/test_2/src/styles/About/About.css
@@ -10,6 +10,7 @@
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  padding: 5em 0;
 }
 
 .about__title {
@@ -63,6 +64,7 @@
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  padding-bottom: 2em;
 }
 
 .client__wrapper img {
