--- a/test_2/src/styles/About/About.scss
+++ b/test_2/src/styles/About/About.scss
@@ -5,6 +5,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    padding: 5em 0;
 }
 
 .about__title {
@@ -47,6 +48,8 @@
 
         display: flex;
         justify-content: center;
+
+        padding-bottom: 2em;
     }
 
     img {
