--- a/test_2/src/styles/Pricing/Pricing.css
+++ b/test_2/src/styles/Pricing/Pricing.css
@@ -12,6 +12,12 @@
           justify-content: center;
 }
 
+@media screen and (max-width: 900px) {
+  .pricing__wrapper {
+    padding-bottom: 5em;
+  }
+}
+
 .pricing__title {
   text-align: center;
   font-weight: 600;
