added login & registration modal

--- a/test_2/src/styles/NavBar/Nav/Nav.scss
+++ b/test_2/src/styles/NavBar/Nav/Nav.scss
@@ -61,6 +61,7 @@
         border: 1px solid white;
         border-radius: 20px;
         padding: 0.8em 3em;
+        cursor: pointer;
 
         transition: all .3s ease;
 
