--- a/test_2/src/styles/Header/Header.css
+++ b/test_2/src/styles/Header/Header.css
@@ -66,6 +66,7 @@
   padding: 0.5em 1em;
   border: 1px solid white;
   border-radius: 20px;
+  cursor: pointer;
   -webkit-transition: all .3s ease;
   transition: all .3s ease;
 }
