--- a/test_2/src/index.css
+++ b/test_2/src/index.css
@@ -3,13 +3,14 @@ html {
   overflow-x: hidden;
 }
 
+body {
+  background-color: #f7f7fd;
+}
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-}
-
-* {
   font-family: "Roboto", sans-serif;
   color: rgb(50, 50, 50);
 }
